vlib/v/checker/tests/os_prefix.vv
import os

fn main() {
	cmd := 'ls'
	result := execute(cmd)
	println(result)
}
